--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <header>
-      <img src="images/me.png" alt="Drawing of Stephanie Shaw" class="profile-image">
+      <img src="images/profilepic.jpg" alt="Picture of Catwoman and a cat to represent Steph" class="profile-image">
       <h1 class="tag name">Hello, I’m Steph.</h1>
       <p class="tag location">My home is Auckland, New Zealand.</p>
     </header>
@@ -25,14 +25,14 @@
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m a graphic/UI Designer, budding Front-End Web Developer and Apple fanatic. I have a Bachelor of Design (Hons) majoring in Visual Communications, and have worked as a Junior UI designer. Upon completion of the Treehouse Techdegree, I undertake my Master of Design.</p>
+        <p>I’m a graphic/UI Designer and budding Front-End Web Developer. I have a Bachelor of Design (Hons) majoring in Visual Communications, and have worked as a Junior UI designer. Upon completion of the Treehouse Techdegree, I undertake my Master of Design.</p>
         <p> My strengths lie in layout, typography, creative concept and my sharp attention to detail.</p>
         <p>I am also a passionate educator and teach by day. Seven years teaching experience, in independent and collaborative/modern learning environments, has equipped me with strong skills in communication, collaboration, innovation, planning, project management and positive relationship management.</p>
       </div>
 
       <div class="card">
-        <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <h2>My Goals</h2>
+        <p>I will develop my skills in:</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
