--- a/about.html
+++ b/about.html
@@ -11,7 +11,6 @@
 </head>
 
   <body>
-
     <div class="main-nav">
         <ul class="nav">
           <li class="name">Stephanie Shaw</li>
@@ -22,36 +21,53 @@
 
     <header>
       <img src="images/profilepic.jpg" alt="Picture of Catwoman and a cat to represent Steph" class="profile-image">
-      <h1 class="tag name">Hello, I’m Steph.</h1>
-      <p class="tag location">Hybrid Designer + Developer</p>
+      <h1 class="tag name">My Specifications</h1>
+      <p class="tag location">  <a class="cv" href="media/docs/steph-shaw-resume.pdf" target="_blank" style="border-bottom: none;"><span data-radium="true">Download my Resume</span></a></p>
+
     </header>
 
     <main class="flex">
       <div class="card">
-        <h2>About Me</h2>
-        <p>I’m a graphic/UI Designer and budding Front-End Web Developer. I have a BDes(Hons) and have worked as a freelance and UI Designer. I am upskilling from print design to the digital realm.</p>
-        <p>Upon completion of the Treehouse Techdegree, I undertake my Master of Design at Media Design School, New Zealand.</p>
-        <p>I am also an experienced educator, passionate about teaching underprivileged children, which is what I do by day.</p>
-        <p>My home is Auckland, New Zealand.</p>
+        <h2>Skill Set</h2>
+        <p>Design strengths and specialties</p>
+        <ul class="skills">
+          <li>Creative Concept</li>
+          <li>Layout</li>
+          <li>Typography</li>
+          <li>UI Design</li>
+          <li>Modernism</li>
+          <li>Minimalism</li>
+        </ul>
+
+        <p>Strengths gained from seven years teaching experience</p>
+        <ul class="skills">
+          <li>Leadership</li>
+          <li>Positive Behaviour Management</li>
+          <li>Communication</li>
+          <li>Project Management</li>
+          <li>Innovative Learning Environments</li>
+          <li>Collaboration</li>
+        </ul>
       </div>
 
       <div class="card">
-        <h2>My Goals</h2>
-        <p>I will develop my skills in:</p>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Sass</li>
-          <li>JavaScript</li>
-          <li>PHP</li>
-          <li>User Experience Design</li>
-          <li>Small Business</li>
-        </ul>
-        <p>I aspire to create cutting-edge, impactful, streamlined, intuitive and useful digital interfaces.</p>
-          <p>My career goals are to work as a Freelance Website Designer/Developer and Tertiary Design Educator.</p>
+        <h2>Education</h2>
+        <p><span class="quals">Graduate Diploma of Teaching (Primary)</span><br>
+           Massey University <br>
+           Auckland, New Zealand<br>
+           2008 - 2009
+        </p>
+        <br>
+        <p><span class="quals">Bachelor of Design (Honours)</span><br>
+           Major: Visual Communications - Media Design<br>
+           Unitec School of Design <br>
+           Auckland, New Zealand <br>
+           2004 - 2008
+        </p>
       </div>
 
     </main>
+
     <footer>
       <ul>
         <li><a href="https://github.com/designbysteph" target="_blank"> <i class="fa fa-github fa-lg"></i></a></li>
