--- a/index.html
+++ b/index.html
@@ -9,56 +9,60 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
   <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
+    <body>
 
-  <body>
-
-    <div class="main-nav">
-        <ul class="nav">
-          <li class="name">Stephanie Shaw</li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">My Specs</a></li>
-        </ul>
-    </div>
-
-    <header>
-      <img src="images/profilepic.jpg" alt="Picture of Catwoman and a cat to represent Steph" class="profile-image">
-      <h1 class="tag name">Hello, I’m Steph.</h1>
-      <p class="tag location">Hybrid Designer + Developer</p>
-    </header>
-
-    <main class="flex">
-      <div class="card">
-        <h2>About Me</h2>
-        <p>I’m a graphic/UI Designer and budding Front-End Web Developer. I have a BDes(Hons) and have worked as a freelance and UI Designer. I am upskilling from print design to the digital realm.</p>
-        <p>Upon completion of the Treehouse Techdegree, I undertake my Master of Design at Media Design School, New Zealand.</p>
-        <p>I am also an experienced educator, passionate about teaching underprivileged children, which is what I do by day.</p>
-        <p>My home is Auckland, New Zealand.</p>
+      <div class="main-nav">
+          <ul class="nav">
+            <li class="name"><a href="index.html">Stephanie Shaw</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="specs.html">My Specs</a></li>
+            <li><a href="photos.html">Things I Love</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
       </div>
 
-      <div class="card">
-        <h2>My Goals</h2>
-        <p>I will develop my skills in:</p>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Sass</li>
-          <li>JavaScript</li>
-          <li>PHP</li>
-          <li>User Experience Design</li>
-          <li>Small Business</li>
-        </ul>
-        <p>I aspire to create cutting-edge, impactful, streamlined, intuitive and useful digital interfaces.</p>
-          <p>My career goals are to work as a Freelance Website Designer/Developer and Tertiary Design Educator.</p>
-      </div>
+      <header>
+        <img src="images/profilepic.jpg" alt="Picture of Catwoman and a cat to represent Steph" class="profile-image">
+        <h1 class="tag name">Hello, I’m Steph.</h1>
+        <p class="tag location">Hybrid Designer + Developer</p>
+      </header>
 
-    </main>
-    <footer>
-      <ul>
-        <li><a href="https://github.com/designbysteph" target="_blank"> <i class="fa fa-github fa-lg"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/designbysteph" target="_blank"> <i class="fa fa-linkedin-square fa-lg"></i></a></li>
-        <li><a href="mailto:stephsticks@gmail.com"><i class="fa fa-envelope"></i></a></li>
-      </ul>
-      <p class="copyright">Copyright 2017, Stephanie Shaw</p>
-    </footer>
-  </body>
+      <main class="flex">
+
+        <div class="card">
+          <h2>About Me</h2>
+          <p>I’m a graphic/UI Designer and budding Front-End Web Developer. I have a BDes(Hons) and have worked as a freelance and UI Designer. I am upskilling from print design to the digital realm.</p>
+          <p>Upon completion of the Treehouse Techdegree, I undertake my Master of Design at Media Design School, New Zealand.</p>
+          <p>I am also an experienced educator, passionate about teaching underprivileged children, which is what I do by day.</p>
+          <p>My home is Auckland, New Zealand.</p>
+        </div>
+
+        <div class="card">
+          <h2>My Goals</h2>
+          <p>I plan to develop my skills in:</p>
+          <ul class="skills">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Sass</li>
+            <li>JavaScript</li>
+            <li>PHP</li>
+            <li>User Experience Design</li>
+            <li>Small Business</li>
+          </ul>
+          <p>I aspire to create cutting-edge, impactful, streamlined, intuitive and useful digital interfaces.</p>
+            <p>My career goals are to work as a Freelance Website Designer/Developer and Tertiary Design Educator.</p>
+        </div>
+
+      </main>
+
+      <footer>
+        <ul>
+          <li><a href="https://github.com/designbysteph" target="_blank"> <i class="fa fa-github fa-lg"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/designbysteph" target="_blank"> <i class="fa fa-linkedin-square fa-lg"></i></a></li>
+          <li><a href="mailto:stephsticks@gmail.com"><i class="fa fa-envelope"></i></a></li>
+        </ul>
+        <p class="copyright">Copyright 2017, Stephanie Shaw</p>
+      </footer>
+    </body>
+
   </html>
